--- a/week2.ipynb
+++ b/week2.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "#Read in the data!\n",
-    "gwasdata = hl.read_matrix_table('data/1kg.mt')"
+    "gwasdata = hl.read_matrix_table('1kg.mt')"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "##load other data\n",
-    "otherdata = (hl.import_table('data/1kg_annotations.txt', impute=True)\n",
+    "otherdata = (hl.import_table('1kg_annotations.txt', impute=True)\n",
     "         .key_by('Sample'))"
    ]
   },
