--- a/week2.ipynb
+++ b/week2.ipynb
@@ -7,7 +7,7 @@
     "# Week Two\n",
     "## At Home Activity: Running a GWAS\n",
     "\n",
-    "Genome-wide association studies allow us to identify variation (SNPS) present in one population but not in another. These populations usually consist of two groups where one group has a particular trait while the other does not. In this activity you have been given data from the 1000 genomes project.\n",
+    "Genome-wide association studies allow us to identify variation (SNPs) present in one population but not in another. These populations usually consist of two groups where one group has a particular trait while the other does not. In this activity you have been given data from the 1000 genomes project.\n",
     "\n",
     "This data contains genetic information on these individuals as well as the amount of coffee they consume.\n",
     "We will analyse the data to identify if there is a genetic cause for increased (or decreased) coffee consumption!"
