--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week Two\n",
+    "# Day Two\n",
     "## At Home Activity: Running a GWAS\n",
     "\n",
     "Genome-wide association studies allow us to identify variation (SNPs) present in one population but not in another. These populations usually consist of two groups where one group has a particular trait while the other does not. In this activity you have been given data from the 1000 genomes project.\n",
